src/test/ui/hashmap-iter-value-lifetime.stderr
error[E0502]: cannot borrow `my_stuff` as mutable because it is also borrowed as immutable
  --> $DIR/hashmap-iter-value-lifetime.rs:7:5
   |
LL |     let (_, thing) = my_stuff.iter().next().unwrap();
   |                      -------- immutable borrow occurs here
LL | 
LL |     my_stuff.clear();
   |     ^^^^^^^^ mutable borrow occurs here
...
LL | }
   | - immutable borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
